--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 <style type='text/css'>
 body {
 	margin-top: 1.0em;
-  	background-color: #8ca343;
+  	background-color: white;
 	font-family: 'sans-serif'; 
-  	color: white;
+  	color: black;
 } #container {
 	margin: 0 auto;
 	width: 700px;
 } h1 {
 	font-size: 3.8em;
-	color: #735cbc;
 	margin-bottom: 3px;
 } h1 .small {
 	font-size: 0.4em;
@@ -24,12 +23,8 @@ body {
 	text-decoration: none;
 } h2 {
 	font-size: 1.5em;
-	color: #735cbc;
 } h3 {
 	text-align: center;
-	color: #735cbc;
-} a {
-	color: #735cbc;
 } .description {
 	font-size: 1.2em;
 	margin-bottom: 30px;
@@ -59,7 +54,6 @@ body {
   
 <div id='container'>
     <div class='download'>
-	<a href='http://github.com/markuspeloquin/fluks/zipball/master'><img border='0' width='90' src='http://github.com/images/modules/download/zip.png'></a>
 	<a href='http://github.com/markuspeloquin/fluks/tarball/master'><img border='0' width='90' src='http://github.com/images/modules/download/tar.png'></a>
     </div>
       
@@ -85,9 +79,7 @@ body {
     <p><a href='http://pages.cs.wisc.edu/~markus/email'>Markus Peloquin</a></p>
 
     <h2>Download</h2>
-    <p>
-	You can download a tarball <a href='http://github.com/markuspeloquin/fluks/downloads'>here</a>.
-    </p>
+    <p>You can download a tarball <a href='http://github.com/markuspeloquin/fluks/downloads'>here</a>.</p>
     <p>
 	You can also clone the project with git by running:
 	<pre>$ git clone git://github.com/markuspeloquin/fluks</pre>
